Fix description tabs on product detail; align add-to-cart button right

--- a/assets/sass/components/_webshop.scss
+++ b/assets/sass/components/_webshop.scss
@@ -222,6 +222,16 @@ ins {
 	}
 }
 
+.woocommerce-product-container {
+	.product {
+		@apply grid #{!important};
+	
+		div.images, div.summary {
+			@apply w-full #{!important};
+		}
+	}
+}
+
 .woocommerce-product-attributes {
 
 	th {
